force-app/main/default/objects/Rate__c/Rate__c.object-meta.xml
<CustomObject>
    <label>Rate</label>
    <nameField>
        <label>Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>