force-app/main/default/objects/Rate__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electric Engineer</fullName>
            </value>
            <value>
                <fullName>Plumber</fullName>
            </value>
            <value>
                <fullName>Bricks Engineer</fullName>
            </value>
            <value>
                <fullName>Worker</fullName>
            </value>
            <value>
                <fullName>Carpenter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>